--- a/购酒网/html/search_yanghe.html
+++ b/购酒网/html/search_yanghe.html
@@ -6,11 +6,11 @@
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="../css/main.css">
 	<link rel="icon" href="http://www.gjw.com/favicon.ico" type="image/ico">
-
 	<script src="../js/jquery-1.12.4.min.js"></script>
-    <script src="../js/swiper.min.js"></script>
+	<script src="../js/swiper.min.js"></script>
 	<script src="../js/html.js"></script>
-    <script src="../js/index.js"></script>
+    	<script src="../js/index.js"></script>
+    	<script src="../js/jquery.jqzoom-core.js"></script>
 </head>
 <body>
 	<!-- top部分 -->
